--- a/config/services.yaml
+++ b/config/services.yaml
@@ -12,7 +12,7 @@ services:
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
-        bind:
+        bind: # Automatically binds specific value to a parameter or a specific service to a type
             $message: '%hello_message%'
 
     # makes classes in src/ available to be used as services
