--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,4 +1,6 @@
 security:
+    access_decision_manager:
+        strategy: affirmative
     encoders:
         # this internal class is used by Symfony to represent in-memory users
         # Symfony\Component\Security\Core\User\User: plaintext
@@ -40,3 +42,6 @@ security:
         # - { path: ^/add, roles: ROLE_USER}
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
+
+    role_hierarchy:
+        ROLE_ADMIN: ROLE_USER
